--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Home Page</title>
-  <link rel="stylesheet" href ="C:\xampp\htdocs\responsive blog\rstyle.css">
+  <link rel="stylesheet" href ="rstyle.css">
 </head>
 <body>
   <header id="page-header">
