--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <p class="blog-content">If there's ever a time to get serious about your professional growth, it's now. With the rising
           costs of living...</p><br/>
         <p class="read-more"><a class="read-more-btn" href="#">read more</a></p><br/>
-        <img src = "C:\Users\HP\Downloads\linkdin.jpeg" alt="linkdin" class="linkdin">
+        <img src = "linkdin.jpeg" alt="linkdin" class="linkdin">
         <p class="read-more">1.Gather information about industries that interest you. ...</p>
         <p class="read-more">2.Get notified of open positions quickly. ...</p>
         <p class="read-more">3.Showcase your skills. ...</p>
         <p class="read-more">4.Reconnect and develop new connections. ...</p>
         <p class="read-more">5.Help recruiters find you there.</p><br/>
-        <img src="C:\Users\HP\Downloads\linkdin1.jpeg" alt="linkdin1" class="linkdin1">
+        <img src="linkdin1.jpeg" alt="linkdin1" class="linkdin1">
        </article>
     </section>
   
@@ -49,7 +49,7 @@
         <p class="read-more">3.Check your work dresscode...</p>
         <p class="read-more">4.dress according to ocassion..</p>
         <p class="read-more">5.remove facial and body piercing...</p>
-        <img src="C:\Users\HP\Downloads\Dress-for-Success-Infographic-horizontal1.jpg" alt="dress-for-success" class="dress-for-success">
+        <img src="Dress-for-Success-Infographic-horizontal1.jpg" alt="dress-for-success" class="dress-for-success">
 
        </article>
     </section>
@@ -63,7 +63,7 @@
           that will land you that position!
         </p>
         <p class="read-more"><a class="read-more-btn" href="#">read more</a></p><br/>
-        <img src="C:\Users\HP\Downloads\interview2.png" alt="interview2" class="interview2">
+        <img src="interview2.png" alt="interview2" class="interview2">
         <p class="read-more">1.Research about company and bussiness....</p>
         <p class="read-more">2.Re-read the job descripton...</p>
         <p class="read-more">3.Keep your answers ready for commonly asked questions...</p>
@@ -71,7 +71,7 @@
         <p class="read-more">5.smile and make eyecontact throughout the interview</p>
         <p class="read-more">6.Reach 15-20 mintues early at the location...</p>
         <p class="read-more">7.dress formally...</p>
-        <img src="C:\Users\HP\Downloads\interview.jpeg" alt="interview" class="interview">
+        <img src="interview.jpeg" alt="interview" class="interview">
        </article>
     </section>
   </main>
